2009-09-17  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Added help categories: #cookie and #hook. Added #https tag to
	--https-proxy and --https-proxy, --all-proxy and --no-proxy.
	* src/OptionHandlerFactory.cc
	* src/help_tags

2009-09-16  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Made MSG_NOT_FILE translatable.
	* src/message.h

2009-09-14  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Updated man page for --help option.
	* doc/aria2c.1.txt

2009-09-14  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Updated doc.
	* src/XmlRpcMethod.h

2009-09-14  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Help category now starts with "#" to distinguish a category from
	keyword search. For example, "http" categroy is now "#http". You
	can type "--help=#http" to get explanation of options related to
	http. If '#' is omitted, then the argument is treated as a keyword
	and aria2 searches options whose name includes the keyword and
	print matched ones. For example, "--help=http" will show options
	whose name includes "http".
	* src/OptionHandlerFactory.cc
	* src/help_tags.h
	* src/usage_text.h
	* src/version_usage.cc

2009-09-11  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Documented missing experimental tag and newly added xml-rpc tag in
	man page.
	* doc/aria2c.1.txt

2009-09-11  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Added xml-rpc help tag. Tagged xml-rpc related options with
	xml-rpc tag.
	* src/OptionHandlerFactory.cc
	* src/help_tags.h

2009-09-11  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Updated message when a path is not a file. Updated common message
	for wrong option.
	* src/OptionHandlerException.cc
	* src/message.h

2009-09-10  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Use File::isFile() instead of File::exists(). Updated message when
	a path is not a file.
	* src/OptionHandlerImpl.cc
	* src/message.h
